add async action and redux-thunk library

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="Todo List by Ray">
   <title>React Todo List</title>
 
-   <link href="./styles/main.css" rel="stylesheet" type="text/css">
+   <link href="/dist/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
